# GstreamerOMXSigma

./: README.md  build_ffmpeg.sh  build_glib.sh  build_gstbase.sh  build_gstgood.sh  build_gstomx.sh  build_gstreamer.sh  build_libxml2.sh  build_pkg-config.sh  configure.in-glib.patch  gstomx.conf
etc/: patch_gstreamer.patch
glib-2.24.2/: Makefile  config.h  config.lt  config.status  configure  configure.in  gio-2.0-uninstalled.pc  gio-unix-2.0-uninstalled.pc  glib-2.0-uninstalled.pc  glib-zip  gmodule-2.0-uninstalled.pc  gmodule-no-export-2.0-uninstalled.pc  gobject-2.0-uninstalled.pc  gobject-2.0.pc  gthread-2.0-uninstalled.pc  libtool
glib-2.24.2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
glib-2.24.2/docs/: Makefile
glib-2.24.2/gio/: Makefile  gappinfo.lo  gasynchelper.lo  gasyncinitable.lo  gasyncresult.lo  gbufferedinputstream.lo  gbufferedoutputstream.lo  gcancellable.lo  gcharsetconverter.lo  gcontenttype.lo  gconverter.lo  gconverterinputstream.lo  gconverteroutputstream.lo  gdatainputstream.lo  gdataoutputstream.lo  gdesktopappinfo.lo  gdrive.lo  gdummyfile.lo  gemblem.lo  gemblemedicon.lo  gfile.lo  (+81 more)
gst-ffmpeg-0.10.11/: Makefile  config.status  libtool
gst-plugins-amp-0.10.2/: Makefile.am  Makefile.in  configure  configure.ac
gst-plugins-amp-0.10.2/amp/: Makefile.am  Makefile.in  README  gstamp.c  gstamp.h  gstampaudiosink.c  gstampaudiosink.h  gstampdemux.c  gstampfilter.c  gstampfilter.h  gstampsrc.c  gstampsrc.h  gstampvideoscale.c  gstampvideosink.c  gstampvideosink.h  gstampvolume.c
gst-plugins-base-0.10.31/: Makefile  _stdint.h  config.h  config.status  gst-plugins-base.spec  libtool
gst-plugins-good-0.10.26/: Makefile  _stdint.h  config.h  config.status  gst-plugins-good.spec  libtool
gstreamer-0.10.2/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  gstreamer.spec  libtool
gstreamer-0.10.31/: Makefile  _stdint.h  config.h  config.status  libtool
lib/: libglib-2.0.la  libgmodule-2.0.la  libgobject-2.0.so.0.2400.2  libgstapp-0.10.so.0.22.0  libgstbase-0.10.so.0.27.0  libgstcontroller-0.10.so.0.27.0  libgstdataprotocol-0.10.so.0.27.0  libgstfft-0.10.la  libgstfft-0.10.so.0.22.0  libgstinterfaces-0.10.la  libgstinterfaces-0.10.so.0.22.0  libgstnet-0.10.so.0.27.0  libgstnetbuffer-0.10.so.0.22.0  libgstreamer-0.10.la  libgstriff-0.10.so.0.22.0  libgstrtp-0.10.la  libgstrtp-0.10.so.0.22.0  libgstsdp-0.10.so.0.22.0  libgsttag-0.10.la  libgsttag-0.10.so.0.22.0  libgstvideo-0.10.la  libgstvideo-0.10.so.0.22.0  libxml2.la  xml2Conf.sh
libxml2-2.7.7/: Makefile  config.h  config.status  libtool  libxml-2.0.pc  libxml2.la  libxml2.spec  runsuite  runtest  runxmlconf  testAutomata  testC14N  testHTML  testModule  testReader  testRegexp  testRelax  testSAX  testSchemas  testThreads  testURI  testXPath  testapi  testchar  testdict  testdso.la  testrecurse  xmlcatalog  xmllint
pkg-config-0.25/: Makefile  config.h  config.status  libtool
(+3201 files in other folders)
